# ERTS

./: .gitignore  action_player.py  action_recorder.py  discord_sender.py  env.copy  input_manager.py  logger.py  main.py  pyproject.toml
scripts/: login.json  preprocess.json  send_home.json  send_ship.json  show_resource.json  transfer_blue.json  transfer_yellow.json
